#pragma once

#include <memory>
#include <optional>
#include <string>
#include <unordered_set>
#include <vector>

// ============================================================
// ASTNode.h — 抽象语法树（AST）节点定义
// ------------------------------------------------------------
// 本文件定义 MiniLang 编译前端的核心数据结构：AST 节点基类与全部
// 子类（表达式 / 语句 / 声明），以及用于快速分发的 NodeType 枚举。
// 所有节点通过 Visitor 模式（accept/visit*）被解释器、编译器、格式化器
// 遍历，从而与具体遍历逻辑解耦。
// ============================================================

// A1 fix: ASTNode.h 不再 include interpreter/Value.h。
// Value 仅作前向声明，getValue() 实现移至 ASTNode.cpp。
// 调用 getValue() 的模块（Interpreter/Compiler）需自行 include Value.h。
struct Value;

// ============================================================
// AST 节点类型枚举（用于快速分发，替代 dynamic_cast）
// ============================================================

enum class NodeType {
    NODE_BINARY_OP,
    NODE_UNARY_OP,
    NODE_NUMBER_LITERAL,
    NODE_STRING_LITERAL,
    NODE_BOOL_LITERAL,
    NODE_VAR_DECL,
    NODE_ASSIGNMENT,
    NODE_VAR_REF,
    NODE_IF_STMT,
    NODE_WHILE_STMT,
    NODE_FOR_STMT,
    NODE_FUN_DECL,
    NODE_FUN_CALL,
    NODE_RETURN_STMT,
    NODE_PRINT_STMT,
    NODE_BLOCK,
    NODE_ARRAY_LITERAL,
    NODE_DICT_LITERAL,
    NODE_INDEX_ACCESS,
    NODE_INDEX_ASSIGN,
    NODE_CLASS_DECL,
    NODE_MEMBER_ACCESS,
    NODE_MEMBER_ASSIGN,
    NODE_METHOD_CALL,
    NODE_NULL_LITERAL,
    NODE_SUPER_EXPR,
    NODE_BREAK_STMT,
    NODE_CONTINUE_STMT,
    NODE_TRY_STMT,
    NODE_THROW_STMT,
    NODE_IMPORT_STMT,
    NODE_EXPORT_STMT,
    NODE_INTERPOLATED_STRING, // C5 fix: 保留插值字符串 AST 结构
};

// ============================================================
// 前向声明 Visitor
// ============================================================
class Visitor;

// ============================================================
// AST 节点基类与所有子类声明
// ============================================================

/// AST 节点基类
// A3 fix: 继承 enable_shared_from_this 使运行时可从 ASTNode& 获取 shared_ptr，
// 用于 funRegistry_/ClassInfo.methods/ClosureData.body 安全持有 FunDecl 所有权。
class ASTNode : public std::enable_shared_from_this<ASTNode> {
public:
    int line = 0;                                    // 行号
    int column = 0;                                  // 列号
    NodeType nodeType = NodeType::NODE_NULL_LITERAL; // 节点类型（用于快速分发）

    ASTNode() = default;
    ASTNode(int ln, int col) : line(ln), column(col) {}
    virtual ~ASTNode() = default;

    /// 访问者模式接受方法
    virtual void accept(Visitor& visitor) = 0;

    /// 获取节点类型名称（用于可视化）
    virtual std::string nodeName() const = 0;

    /// 获取子节点列表（用于可视化遍历）
    virtual std::vector<ASTNode*> children() const = 0;
};

/// 二元运算符类型枚举（缓存字符串→枚举映射，避免运行时字符串比较）
enum class BinOpType {
    BIN_AND,
    BIN_OR,
    BIN_EQ,
    BIN_NEQ,
    BIN_LT,
    BIN_GT,
    BIN_LTE,
    BIN_GTE,
    BIN_ADD,
    BIN_SUB,
    BIN_MUL,
    BIN_DIV,
    BIN_MOD,
    BIN_UNKNOWN
};

/// 二元运算节点
class BinaryOp : public ASTNode {
public:
    BinOpType opType;               // 运算符枚举
    std::shared_ptr<ASTNode> left;  // 左操作数
    std::shared_ptr<ASTNode> right; // 右操作数

    BinaryOp(BinOpType opType, std::shared_ptr<ASTNode> l, std::shared_ptr<ASTNode> r, int ln = 0, int col = 0)
        : ASTNode(ln, col), opType(opType), left(std::move(l)), right(std::move(r)) {
        nodeType = NodeType::NODE_BINARY_OP;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return std::string("BinaryOp(") + opTypeStr(opType) + ")"; }
    std::vector<ASTNode*> children() const override { return {left.get(), right.get()}; }

    /// 枚举 → 字符串（用于显示/格式化/错误信息）
    static const char* opTypeStr(BinOpType t) {
        switch (t) {
        case BinOpType::BIN_AND:
            return "and";
        case BinOpType::BIN_OR:
            return "or";
        case BinOpType::BIN_EQ:
            return "==";
        case BinOpType::BIN_NEQ:
            return "!=";
        case BinOpType::BIN_LT:
            return "<";
        case BinOpType::BIN_GT:
            return ">";
        case BinOpType::BIN_LTE:
            return "<=";
        case BinOpType::BIN_GTE:
            return ">=";
        case BinOpType::BIN_ADD:
            return "+";
        case BinOpType::BIN_SUB:
            return "-";
        case BinOpType::BIN_MUL:
            return "*";
        case BinOpType::BIN_DIV:
            return "/";
        case BinOpType::BIN_MOD:
            return "%";
        default:
            return "?";
        }
    }

    // C14 fix: 统一的运算符优先级表（Parser 递归下降结构隐式编码，
    // Formatter 显式查询，二者必须一致。提取为单一来源避免漂移）。
    // 值越大优先级越高（1=最低, 6=最高）。
    static int precedence(BinOpType t) {
        switch (t) {
        case BinOpType::BIN_OR:
            return 1;
        case BinOpType::BIN_AND:
            return 2;
        case BinOpType::BIN_EQ:
        case BinOpType::BIN_NEQ:
            return 3;
        case BinOpType::BIN_LT:
        case BinOpType::BIN_GT:
        case BinOpType::BIN_LTE:
        case BinOpType::BIN_GTE:
            return 4;
        case BinOpType::BIN_ADD:
        case BinOpType::BIN_SUB:
            return 5;
        case BinOpType::BIN_MUL:
        case BinOpType::BIN_DIV:
        case BinOpType::BIN_MOD:
            return 6;
        default:
            return 0;
        }
    }

    /// 是否右结合（目前无右结合二元运算符，赋值不是 BinaryOp）
    static bool isRightAssociative(BinOpType /*t*/) { return false; }
};

/// 一元运算节点
class UnaryOp : public ASTNode {
public:
    enum class UnaryOpType { UOP_NEGATE, UOP_NOT, UOP_PLUS, UOP_UNKNOWN };

    UnaryOpType opType;               // 运算符类型枚举
    std::shared_ptr<ASTNode> operand; // 操作数

    UnaryOp(UnaryOpType opType, std::shared_ptr<ASTNode> o, int ln = 0, int col = 0)
        : ASTNode(ln, col), opType(opType), operand(std::move(o)) {
        nodeType = NodeType::NODE_UNARY_OP;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return std::string("UnaryOp(") + opTypeStr(opType) + ")"; }
    std::vector<ASTNode*> children() const override { return {operand.get()}; }

    /// 枚举 → 字符串
    static const char* opTypeStr(UnaryOpType t) {
        switch (t) {
        case UnaryOpType::UOP_NEGATE:
            return "-";
        case UnaryOpType::UOP_NOT:
            return "not";
        case UnaryOpType::UOP_PLUS:
            return "+";
        default:
            return "?";
        }
    }
};

/// 数字字面量节点
// A1 fix: 用标量替代 Value 存储，AST 层不再持有 Value 对象。
// getValue() 按需构造 Value，供 Interpreter/Compiler 访问时使用。
class NumberLiteral : public ASTNode {
public:
    bool isFloat_;      // true=浮点，false=整数
    int64_t intValue_;  // 整数值（isFloat_==false 时有效）
    double floatValue_; // 浮点值（isFloat_==true 时有效）

    NumberLiteral(int64_t v, int ln = 0, int col = 0)
        : ASTNode(ln, col), isFloat_(false), intValue_(v), floatValue_(0.0) {
        nodeType = NodeType::NODE_NUMBER_LITERAL;
    }
    NumberLiteral(double v, int ln = 0, int col = 0) : ASTNode(ln, col), isFloat_(true), intValue_(0), floatValue_(v) {
        nodeType = NodeType::NODE_NUMBER_LITERAL;
    }

    /// 按需构造 Value（A1 fix: 替代原 Value value 成员）
    // A1 fix: 实现移至 ASTNode.cpp（构造 Value 需其完整定义）
    Value getValue() const;

    bool isInt() const { return !isFloat_; }
    bool isFloatValue() const { return isFloat_; }
    int64_t intVal() const { return intValue_; }
    double floatVal() const { return floatValue_; }

    void accept(Visitor& visitor) override;
    // A1 fix: nodeName() 实现移至 ASTNode.cpp（调用 getValue().toString()）
    std::string nodeName() const override;
    std::vector<ASTNode*> children() const override { return {}; }
};

/// 字符串字面量节点
// A1 fix: 移除 cachedValue_ 成员，getValue() 按需构造 Value。
// 原 A2 fix 的 takeValue() 破坏性问题已由 getValue() const 解决。
class StringLiteral : public ASTNode {
public:
    std::string value;

    StringLiteral(const std::string& v, int ln = 0, int col = 0) : ASTNode(ln, col), value(v) {
        nodeType = NodeType::NODE_STRING_LITERAL;
    }

    /// 获取 Value（A1 fix: 按需构造，非破坏性，可安全多次遍历同一 AST）
    // A1 fix: 实现移至 ASTNode.cpp（构造 Value 需其完整定义）
    Value getValue() const;

    void accept(Visitor& visitor) override;
    std::string nodeName() const override {
        std::string escaped;
        for (char ch : value) {
            if (ch == '\\')
                escaped += "\\\\";
            else if (ch == '"')
                escaped += "\\\"";
            else
                escaped += ch;
        }
        return "String(\"" + escaped + "\")";
    }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// C5 fix: 插值字符串节点 — 保留 `"text {expr} more {expr2}"` 的 AST 结构
/// 原 parseInterpolatedString 将其抹平为 BinaryOp(BIN_ADD) 链，Formatter 无法
/// 重建插值语法，AstViewer 只能看到一堆 BinaryOp。本节点存储交替的字面量片段
/// 和表达式，Formatter 可精确重建 `"text {expr} more {expr2}"` 语法。
class InterpolatedString : public ASTNode {
public:
    // literals.size() == expressions.size() + 1
    // 表示: literals[0] + expressions[0] + literals[1] + ... + expressions[n-1] + literals[n]
    std::vector<std::string> literals;                 // 字符串字面量片段
    std::vector<std::shared_ptr<ASTNode>> expressions; // 插值表达式

    // PERF-11 fix: literals 总字符数，由 Parser 构造时预计算。
    // visitInterpolatedString 用此值 + expressions.size() * 8 估算 reserve，避免 realloc。
    size_t literalsTotalLen = 0;
    // AUDIT-P2.9 fix: 闭合 '"' 所在行号（最后一个 TK_STRING_PART 的行号），
    // 供 Formatter 在表达式行号范围内注入独立注释。
    int endLine = 0;

    InterpolatedString(int ln = 0, int col = 0) : ASTNode(ln, col) { nodeType = NodeType::NODE_INTERPOLATED_STRING; }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "InterpolatedString"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> result;
        result.reserve(expressions.size());
        for (const auto& expr : expressions) {
            result.push_back(expr.get());
        }
        return result;
    }
};

/// 布尔字面量节点
// A1 fix: 标量存储（本就是 bool），新增 getValue() 按需构造 Value
class BoolLiteral : public ASTNode {
public:
    bool value;

    BoolLiteral(bool v, int ln = 0, int col = 0) : ASTNode(ln, col), value(v) {
        nodeType = NodeType::NODE_BOOL_LITERAL;
    }

    /// 按需构造 Value（A1 fix）
    // A1 fix: 实现移至 ASTNode.cpp（构造 Value 需其完整定义）
    Value getValue() const;

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "Bool(" + std::string(value ? "true" : "false") + ")"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// 变量声明节点
class VarDecl : public ASTNode {
public:
    std::string name;
    std::string typeAnnotation;           // 类型注解（如 "int", "float", "int[]", "dict" 等）
    std::shared_ptr<ASTNode> initializer; // 可为 nullptr

    VarDecl(const std::string& n, const std::string& typeAnn, std::shared_ptr<ASTNode> init, int ln = 0, int col = 0)
        : ASTNode(ln, col), name(n), typeAnnotation(typeAnn), initializer(std::move(init)) {
        nodeType = NodeType::NODE_VAR_DECL;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override {
        if (typeAnnotation.empty())
            return "VarDecl(" + name + ")";
        return "VarDecl(" + name + ":" + typeAnnotation + ")";
    }
    std::vector<ASTNode*> children() const override {
        if (initializer)
            return {initializer.get()};
        return {};
    }
};

/// 赋值节点
class Assignment : public ASTNode {
public:
    std::string name;
    std::shared_ptr<ASTNode> value;

    Assignment(const std::string& n, std::shared_ptr<ASTNode> v, int ln = 0, int col = 0)
        : ASTNode(ln, col), name(n), value(std::move(v)) {
        nodeType = NodeType::NODE_ASSIGNMENT;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "Assign(" + name + ")"; }
    std::vector<ASTNode*> children() const override { return {value.get()}; }
};

/// 变量引用节点
class VarRef : public ASTNode {
public:
    std::string name;

    VarRef(const std::string& n, int ln = 0, int col = 0) : ASTNode(ln, col), name(n) {
        nodeType = NodeType::NODE_VAR_REF;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "VarRef(" + name + ")"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// if 语句节点
class IfStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> condition;
    std::shared_ptr<ASTNode> thenBranch;
    std::shared_ptr<ASTNode> elseBranch; // 可为 nullptr

    IfStmt(std::shared_ptr<ASTNode> cond, std::shared_ptr<ASTNode> thenB, std::shared_ptr<ASTNode> elseB, int ln = 0,
           int col = 0)
        : ASTNode(ln, col), condition(std::move(cond)), thenBranch(std::move(thenB)), elseBranch(std::move(elseB)) {
        nodeType = NodeType::NODE_IF_STMT;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "IfStmt"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        ch.push_back(condition.get());
        ch.push_back(thenBranch.get());
        if (elseBranch)
            ch.push_back(elseBranch.get());
        return ch;
    }
};

/// while 语句节点
class WhileStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> condition;
    std::shared_ptr<ASTNode> body;

    WhileStmt(std::shared_ptr<ASTNode> cond, std::shared_ptr<ASTNode> b, int ln = 0, int col = 0)
        : ASTNode(ln, col), condition(std::move(cond)), body(std::move(b)) {
        nodeType = NodeType::NODE_WHILE_STMT;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "WhileStmt"; }
    std::vector<ASTNode*> children() const override { return {condition.get(), body.get()}; }
};

/// for 语句节点
class ForStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> initializer; // 可为 nullptr
    std::shared_ptr<ASTNode> condition;   // 可为 nullptr
    std::shared_ptr<ASTNode> update;      // 可为 nullptr
    std::shared_ptr<ASTNode> body;

    ForStmt(std::shared_ptr<ASTNode> init, std::shared_ptr<ASTNode> cond, std::shared_ptr<ASTNode> upd,
            std::shared_ptr<ASTNode> b, int ln = 0, int col = 0)
        : ASTNode(ln, col), initializer(std::move(init)), condition(std::move(cond)), update(std::move(upd)),
          body(std::move(b)) {
        nodeType = NodeType::NODE_FOR_STMT;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ForStmt"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        if (initializer)
            ch.push_back(initializer.get());
        if (condition)
            ch.push_back(condition.get());
        if (update)
            ch.push_back(update.get());
        ch.push_back(body.get());
        return ch;
    }
};

/// 函数声明节点
class FunDecl : public ASTNode {
public:
    std::string name;
    std::vector<std::string> params;
    std::vector<std::string> paramTypes; // 参数类型注解
    std::string returnType;              // 返回值类型注解
    std::shared_ptr<ASTNode> body;
    // F10: 默认参数值。与 params 一一对应，无默认值时为 nullptr。
    // 约束：一旦某参数有默认值，其后所有参数都必须有默认值。
    std::vector<std::shared_ptr<ASTNode>> defaultValues;
    int requiredParamCount = 0; // F10: 必需参数个数（无默认值的前缀参数数量）

    // PERF-08 fix: 自由变量分析结果缓存。
    // computeFreeVariables 是纯函数（仅依赖函数体 AST 结构，不依赖运行时环境），
    // 同一 FunDecl 多次被闭包捕获时无需重复遍历整个函数体 AST。
    // mutable 允许 const FunDecl& 修改缓存；AST 重建后 FunDecl 是新对象，缓存自动失效。
    mutable std::optional<std::unordered_set<std::string>> cachedFreeVars_;

    FunDecl(const std::string& n, std::vector<std::string> p, std::vector<std::string> pt, const std::string& rt,
            std::shared_ptr<ASTNode> b, int ln = 0, int col = 0)
        : ASTNode(ln, col), name(n), params(std::move(p)), paramTypes(std::move(pt)), returnType(rt),
          body(std::move(b)), requiredParamCount(static_cast<int>(this->params.size())) {
        nodeType = NodeType::NODE_FUN_DECL;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "FunDecl(" + name + ")"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        if (body)
            ch.push_back(body.get());
        for (const auto& dv : defaultValues) {
            if (dv)
                ch.push_back(dv.get());
        }
        return ch;
    }
};

/// 函数调用节点
class FunCall : public ASTNode {
public:
    std::string name;
    std::vector<std::shared_ptr<ASTNode>> arguments;

    /// 链式调用：非 null 时表示被调用表达式（如 f(x)(y) 中的 f(x)）
    /// 此时 name 为空，调用 callee 求值结果（需为闭包）
    std::shared_ptr<ASTNode> callee;

    /// 缓存：首次调用解析后存储 FunDecl 的 shared_ptr，后续调用跳过查找。
    /// A3 fix: 改为 shared_ptr 持有所有权，避免 AST 重建后缓存的裸指针悬垂。
    std::shared_ptr<FunDecl> resolvedDecl;
    bool isResolved = false;
    int resolvedGen_ = -1; // M7: 缓存时的 funRegistry 代数，不匹配则失效

    FunCall(const std::string& n, std::vector<std::shared_ptr<ASTNode>> args, int ln = 0, int col = 0)
        : ASTNode(ln, col), name(n), arguments(std::move(args)) {
        nodeType = NodeType::NODE_FUN_CALL;
    }

    /// 链式调用构造：callee 为任意表达式
    FunCall(std::shared_ptr<ASTNode> calleeExpr, std::vector<std::shared_ptr<ASTNode>> args, int ln = 0, int col = 0)
        : ASTNode(ln, col), arguments(std::move(args)), callee(std::move(calleeExpr)) {
        nodeType = NodeType::NODE_FUN_CALL;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "FunCall(" + (callee ? "expr" : name) + ")"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        if (callee)
            ch.push_back(callee.get());
        for (auto& arg : arguments) {
            ch.push_back(arg.get());
        }
        return ch;
    }
};

/// return 语句节点
class ReturnStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> value; // 可为 nullptr

    ReturnStmt(std::shared_ptr<ASTNode> v, int ln = 0, int col = 0) : ASTNode(ln, col), value(std::move(v)) {
        nodeType = NodeType::NODE_RETURN_STMT;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ReturnStmt"; }
    std::vector<ASTNode*> children() const override {
        if (value)
            return {value.get()};
        return {};
    }
};

/// print 语句节点
class PrintStmt : public ASTNode {
public:
    std::vector<std::shared_ptr<ASTNode>> values;

    PrintStmt(std::vector<std::shared_ptr<ASTNode>> v, int ln = 0, int col = 0)
        : ASTNode(ln, col), values(std::move(v)) {
        nodeType = NodeType::NODE_PRINT_STMT;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "PrintStmt"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        for (auto& v : values)
            ch.push_back(v.get());
        return ch;
    }
};

/// 代码块节点
class Block : public ASTNode {
public:
    std::vector<std::shared_ptr<ASTNode>> statements;
    int closingBraceLine = 0; // L18 fix: '}' 所在行号，用于格式化器刷新块尾部注释

    Block(std::vector<std::shared_ptr<ASTNode>> stmts, int ln = 0, int col = 0)
        : ASTNode(ln, col), statements(std::move(stmts)) {
        nodeType = NodeType::NODE_BLOCK;
    }

    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "Block"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        for (auto& s : statements) {
            ch.push_back(s.get());
        }
        return ch;
    }
};

// ============================================================
// 新增 AST 节点
// ============================================================

/// 数组字面量节点 [e1, e2, e3]
class ArrayLiteral : public ASTNode {
public:
    std::vector<std::shared_ptr<ASTNode>> elements;
    ArrayLiteral(std::vector<std::shared_ptr<ASTNode>> elems, int ln = 0, int col = 0)
        : ASTNode(ln, col), elements(std::move(elems)) {
        nodeType = NodeType::NODE_ARRAY_LITERAL;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ArrayLiteral"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        for (auto& e : elements)
            ch.push_back(e.get());
        return ch;
    }
};

/// 字典字面量节点 {"key": value, ...}
class DictLiteral : public ASTNode {
public:
    std::vector<std::pair<std::shared_ptr<ASTNode>, std::shared_ptr<ASTNode>>> pairs;
    DictLiteral(std::vector<std::pair<std::shared_ptr<ASTNode>, std::shared_ptr<ASTNode>>> p, int ln = 0, int col = 0)
        : ASTNode(ln, col), pairs(std::move(p)) {
        nodeType = NodeType::NODE_DICT_LITERAL;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "DictLiteral"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        for (auto& p : pairs) {
            ch.push_back(p.first.get());
            ch.push_back(p.second.get());
        }
        return ch;
    }
};

/// 索引访问节点 arr[index] 或 dict[key]
class IndexAccess : public ASTNode {
public:
    std::shared_ptr<ASTNode> object;
    std::shared_ptr<ASTNode> index;
    IndexAccess(std::shared_ptr<ASTNode> obj, std::shared_ptr<ASTNode> idx, int ln = 0, int col = 0)
        : ASTNode(ln, col), object(std::move(obj)), index(std::move(idx)) {
        nodeType = NodeType::NODE_INDEX_ACCESS;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "IndexAccess"; }
    std::vector<ASTNode*> children() const override { return {object.get(), index.get()}; }
};

/// 索引赋值节点 arr[index] = value 或 dict[key] = value
class IndexAssign : public ASTNode {
public:
    std::shared_ptr<ASTNode> object;
    std::shared_ptr<ASTNode> index;
    std::shared_ptr<ASTNode> value;
    IndexAssign(std::shared_ptr<ASTNode> obj, std::shared_ptr<ASTNode> idx, std::shared_ptr<ASTNode> val, int ln = 0,
                int col = 0)
        : ASTNode(ln, col), object(std::move(obj)), index(std::move(idx)), value(std::move(val)) {
        nodeType = NodeType::NODE_INDEX_ASSIGN;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "IndexAssign"; }
    std::vector<ASTNode*> children() const override { return {object.get(), index.get(), value.get()}; }
};

/// 类声明节点
class ClassDecl : public ASTNode {
public:
    std::string name;
    std::string superClassName;
    std::vector<std::shared_ptr<ASTNode>> members;
    // AUDIT-P2.8 fix: 闭合 '}' 所在行号，供 Formatter 在类体末尾注入
    // closingBraceLine 之前的独立注释（对齐 formatBlock 的注释注入模式）。
    int closingBraceLine = 0;
    ClassDecl(const std::string& n, const std::string& super, std::vector<std::shared_ptr<ASTNode>> mems, int ln = 0,
              int col = 0)
        : ASTNode(ln, col), name(n), superClassName(super), members(std::move(mems)) {
        nodeType = NodeType::NODE_CLASS_DECL;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ClassDecl(" + name + ")"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        for (auto& m : members)
            ch.push_back(m.get());
        return ch;
    }
};

/// 成员访问节点 obj.field
class MemberAccess : public ASTNode {
public:
    std::shared_ptr<ASTNode> object;
    std::string fieldName;
    MemberAccess(std::shared_ptr<ASTNode> obj, const std::string& field, int ln = 0, int col = 0)
        : ASTNode(ln, col), object(std::move(obj)), fieldName(field) {
        nodeType = NodeType::NODE_MEMBER_ACCESS;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "MemberAccess(." + fieldName + ")"; }
    std::vector<ASTNode*> children() const override { return {object.get()}; }
};

/// 成员赋值节点 obj.field = value
class MemberAssign : public ASTNode {
public:
    std::shared_ptr<ASTNode> object;
    std::string fieldName;
    std::shared_ptr<ASTNode> value;
    MemberAssign(std::shared_ptr<ASTNode> obj, const std::string& field, std::shared_ptr<ASTNode> val, int ln = 0,
                 int col = 0)
        : ASTNode(ln, col), object(std::move(obj)), fieldName(field), value(std::move(val)) {
        nodeType = NodeType::NODE_MEMBER_ASSIGN;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "MemberAssign(." + fieldName + ")"; }
    std::vector<ASTNode*> children() const override { return {object.get(), value.get()}; }
};

/// 方法调用节点 obj.method(args)
class MethodCall : public ASTNode {
public:
    std::shared_ptr<ASTNode> object;
    std::string methodName;
    std::vector<std::shared_ptr<ASTNode>> arguments;
    MethodCall(std::shared_ptr<ASTNode> obj, const std::string& method, std::vector<std::shared_ptr<ASTNode>> args,
               int ln = 0, int col = 0)
        : ASTNode(ln, col), object(std::move(obj)), methodName(method), arguments(std::move(args)) {
        nodeType = NodeType::NODE_METHOD_CALL;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "MethodCall(." + methodName + ")"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> ch;
        ch.push_back(object.get());
        for (auto& a : arguments)
            ch.push_back(a.get());
        return ch;
    }
};

/// Null 字面量节点
class NullLiteral : public ASTNode {
public:
    NullLiteral(int ln = 0, int col = 0) : ASTNode(ln, col) { nodeType = NodeType::NODE_NULL_LITERAL; }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "Null"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// Super 表达式节点（引用父类方法/字段）
class SuperExpr : public ASTNode {
public:
    SuperExpr(int ln = 0, int col = 0) : ASTNode(ln, col) { nodeType = NodeType::NODE_SUPER_EXPR; }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "Super"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// break 语句节点（跳出最近的 while/for 循环）
class BreakStmt : public ASTNode {
public:
    BreakStmt(int ln = 0, int col = 0) : ASTNode(ln, col) { nodeType = NodeType::NODE_BREAK_STMT; }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "BreakStmt"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// continue 语句节点（跳到最近 while/for 循环的下一次迭代）
class ContinueStmt : public ASTNode {
public:
    ContinueStmt(int ln = 0, int col = 0) : ASTNode(ln, col) { nodeType = NodeType::NODE_CONTINUE_STMT; }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ContinueStmt"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// try-catch-finally 语句节点
class TryStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> tryBlock;     // try 块
    std::string catchVarName;              // catch 绑定的变量名
    std::shared_ptr<ASTNode> catchBlock;   // catch 块
    std::shared_ptr<ASTNode> finallyBlock; // BUG-AUDIT-FINALLY-1: finally 块（可选）
    // AUDIT-P2.9 fix: catch/finally 关键字所在行号，供 Formatter 在
    // tryBlock 与 catch 之间、catch 与 finally 之间注入独立注释。
    int catchKeywordLine = 0;
    int finallyKeywordLine = 0;

    TryStmt(std::shared_ptr<ASTNode> tryB, const std::string& varName, std::shared_ptr<ASTNode> catchB,
            std::shared_ptr<ASTNode> finallyB = nullptr, int ln = 0, int col = 0)
        : ASTNode(ln, col), tryBlock(std::move(tryB)), catchVarName(varName), catchBlock(std::move(catchB)),
          finallyBlock(std::move(finallyB)) {
        nodeType = NodeType::NODE_TRY_STMT;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "TryStmt"; }
    std::vector<ASTNode*> children() const override {
        std::vector<ASTNode*> c;
        if (tryBlock)
            c.push_back(tryBlock.get());
        if (catchBlock)
            c.push_back(catchBlock.get());
        if (finallyBlock)
            c.push_back(finallyBlock.get());
        return c;
    }
};

/// throw 语句节点
class ThrowStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> expression; // 抛出的值

    ThrowStmt(std::shared_ptr<ASTNode> expr, int ln = 0, int col = 0) : ASTNode(ln, col), expression(std::move(expr)) {
        nodeType = NodeType::NODE_THROW_STMT;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ThrowStmt"; }
    std::vector<ASTNode*> children() const override {
        return expression ? std::vector<ASTNode*>{expression.get()} : std::vector<ASTNode*>{};
    }
};

/// import 语句节点
/// 语法: import "path"; 或 import { a, b } from "path";
class ImportStmt : public ASTNode {
public:
    std::string modulePath;         // 模块路径（字符串字面量）
    std::vector<std::string> names; // 导入的名称（空表示导入全部）
    bool importAll;                 // true = import * (导入全部), false = 指定名称

    ImportStmt(const std::string& path, std::vector<std::string> n, bool all, int ln = 0, int col = 0)
        : ASTNode(ln, col), modulePath(path), names(std::move(n)), importAll(all) {
        nodeType = NodeType::NODE_IMPORT_STMT;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ImportStmt"; }
    std::vector<ASTNode*> children() const override { return {}; }
};

/// export 语句节点
/// 语法: export var x = 1; export fun foo() {} export class Foo {}
class ExportStmt : public ASTNode {
public:
    std::shared_ptr<ASTNode> declaration; // 被导出的声明节点

    ExportStmt(std::shared_ptr<ASTNode> decl, int ln = 0, int col = 0)
        : ASTNode(ln, col), declaration(std::move(decl)) {
        nodeType = NodeType::NODE_EXPORT_STMT;
    }
    void accept(Visitor& visitor) override;
    std::string nodeName() const override { return "ExportStmt"; }
    std::vector<ASTNode*> children() const override {
        return declaration ? std::vector<ASTNode*>{declaration.get()} : std::vector<ASTNode*>{};
    }
};
